# HAL-062

./: README.md
Aplikacje/Desktop/: KNRapp.sln  README.md
Aplikacje/Desktop/KNRapp/: DataTransfer.cs  Form1.Designer.cs  Form1.cs  Form1.resx  FormAdmin.Designer.cs  FormAdmin.cs  FormLab.Designer.cs  FormLab.cs  FormManipulator.Designer.cs  FormManipulator.cs  FormMap.Designer.cs  FormMap.cs  GPSfile.cs  Joy.cs  KNRapp.csproj  Siapp.cs  (+1 more)
Aplikacje/Mobilna/: README.md
Autonomia/: README.md
Autonomia/LIDAR/: README.md
Komunikacja/: README.md
Komunikacja/Stream/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Player.cpp  Player.h  main.cpp  mainwindow.h
Laboratorium/: ADClib.c  ADClib.h  GPIOlib.c  GPIOlib.h  PIDlib.c  PIDlib.h  PWMlib.c  PWMlib.h  UARTlib.c  UARTlib.h  main.c  main.h
Laboratorium/src/: PWM_lib.c  PWM_lib.h  SERVO_lib.c  SERVO_lib.h  USART_lib.c  USART_lib.h  main.c
Manipulator/: Neopixel.c  Neopixel.h  README.md  defines.h  main.c
Manipulator/Manipulator2_Siekiera/: ADC.c  ADC.h  CAN.c  CAN.h  RCC.c  RCC.h  UART.c  UART.h  main.c  main.h
Platforma/: README.md
Platforma/Dokumentacja komunikacji/: Dokumentacja_komunikacji_Lazik.md  Dokumentacja_komunikacji_Lazik.tex  README.md
Platforma/MainDriver/: ADClib.c  CANlib.c  CANlib.h  CommuniactionLib.h  CommunicationLib.c  GPS.c  GPS.h  IMUlib.c  MAGlib.c  UARTlib.c  UARTlib.h  main.c  main.h
Platforma/MotorDriver/: ADClibF3.c  ADClibF3.h  CANlibF3.c  CANlibF3.h  CommuniactionF3.c  CommunicationF3.h  ENKlibF3.c  GPIOlibF3.c  PIDlibF3.c  PIDlibF3.h  PWMlibF3.c  main.c  main.h
(+128 files in other folders)
